--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="css/aos.css" />
     <link rel="stylesheet" type="text/css" href="css/all.min.css" />
-    <link rel="stylesheet" type="text/css" href="css/index.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css?id=1234" />
     <noscript>
         <style type="text/css">
             [data-aos] {
@@ -93,12 +93,12 @@
                                 href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item nav-link-explorer">
-                            <a class="nav-link me-lg-3 big-link" href="./guides.html">EZChain Guides</a>
+                            <a class="nav-link me-lg-3 big-link" href="./guides.html">User guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
                         </li>
-                        <li class="nav-item d-mb-none ds-none">
+                        <!-- <li class="nav-item d-mb-none ds-none">
                             <a class="nav-link me-lg-3" style="display: inline-block; padding-top: 4px;"
                                 href="#roadmap"><svg width="18" height="33" viewBox="0 0 18 33" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -119,7 +119,7 @@
                                         fill="#4F4F4F" />
                                 </svg>
                             </a>
-                        </li>
+                        </li> -->
                     </ul>
                 </div>
             </div>
@@ -155,7 +155,7 @@
                                         performance, low cost and simplest oriented system optimization for end users.
                                     </p>
                                     <div class="mt-5 btns" data-aos="fade-up" data-aos-delay="100">
-                                        <a class="btn fw-700 btn--start" href="#start">Start Building</a>
+                                        <a class="btn fw-700 btn--start" href="#distinctive">Overview</a>
                                         <a class="btn fw-700 btn--get" target="_blank" href="/white-paper.pdf">White
                                             Paper</a>
                                     </div>
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </div>
-            <div class="section-3">
+            <div class="section-3" id="distinctive">
                 <div class="container">
                     <div class="row row-1">
                         <h1>Distinctive Features Of EZChain</h1>
