--- a/token-vesting.html
+++ b/token-vesting.html
@@ -121,12 +121,12 @@
                                 stroke-linecap="round"></path>
                         </svg></button>
                     <ol class="ml-4 flex text-sm leading-6 whitespace-nowrap min-w-0">
-                        <li class="flex items-center">EZChain Guides<svg width="3" height="6" aria-hidden="true"
+                        <li class="flex items-center">User guides<svg width="3" height="6" aria-hidden="true"
                                 class="mx-3 overflow-visible text-slate-400">
                                 <path d="M0 0L3 3L0 6" fill="none" stroke="currentColor" stroke-width="1.5"
                                     stroke-linecap="round"></path>
                             </svg></li>
-                        <li class="font-semibold text-slate-900 truncate dark:text-slate-200">Staking Guide EZC</li>
+                        <li class="font-semibold text-slate-900 truncate dark:text-slate-200">How to withdraw EZC from SM Token Vesting</li>
                     </ol>
                 </div>
             </div>
@@ -258,8 +258,8 @@
                                     <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
                                             href="/staking-mainnet.html">Staking EZC on EZChain mainnet</a></li>
                                     <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
-                                            href="/token-vesting.html">How to withdraw EZC from SM Token
-                                            Vesting</a></li>
+                                            href="/token-vesting.html">How to withdraw EZC from SM Token Vesting</a>
+                                    </li>
                                     <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
                                             href="https://ezchain.gitbook.io/ezchain/welcome/welcome">Upgrade Guide</a>
                                     </li>
@@ -271,54 +271,36 @@
                 <div class="lg:pl-[19.5rem] 2xl:pl-[34.5rem]">
                     <div class="max-w-3xl mx-auto pt-32 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:pr-16">
                         <div id="header" class="relative z-20 mb-12">
-                            <h1 class="text-xl font-bold text-orange-400">Staking Guide EZC</h1>
-                            <p class="text-base mt-2">EZChain is a multi-chain platform including X Chain, P Chain, and
-                                C Chain. P Chain is used to manage metadata, manage validator nodes, and user staking.
-                                Therefore, to participate in staking on EZChain, you need to have money in P-Chain.</p>
-                            <h2 class="text-base mt-2 font-bold">Step 1: Swap EZC from C-Chain to P-Chain</h2>
-                            <p>EZChain Wallet supports the Cross Chain swap feature to transfer money between Chains.
-                            </p>
-                            <p class="mt-2 underline">1. On the home page on the left side of the screen, select Cross
-                                Chain</p>
-                            <ul class="ml-4 mt-2">
-                                <li>- In the Source Chain section, select C Chain</li>
-                                <li>- In Destination Chain, select P Chain </li>
-                                <li>- Enter the amount you want to swap, then press Confirm </li>
-                            </ul>
-                            <img class="my-4" src="./images/guides/guide-ezc-1.png" alt="ezchain">
-                            <p class="mt-2 underline">2. Select Transfer to complete the swap</p>
-                            <img class="my-4" src="./images/guides/guide-ezc-2.png" alt="ezchain">
-                            <p class="my-2">When the transaction is completed, you will see the money in the Balance
-                                P-Chain. </p>
-                            <img class="my-4" src="./images/guides/ezc-guide-3.png" alt="ezchain">
-                            <h2 class="text-base mt-2 font-bold">Step 2: Perform Staking on EZChain using the Delegate
-                                feature</h2>
-                            <p class="mt-2 underline">1. On the left side of the home screen, select Earn on the home
-                                page. Select Add Delegator </p>
-                            <img class="my-4" src="./images/guides/guide-ezc-4.png" alt="ezchain">
-                            <p class="mt-2 underline"> 2. There is a list of validator nodes in the network that
-                                appears, along with the amount that can be delegated and the maximum time that can be
-                                staked on that validator node. Choose a node that suits your needs and click Select.
-                            </p>
-                            <img class="my-4" src="./images/guides/guide-ezc-5.png" alt="ezchain">
-                            <p class="mt-2 underline">3. Fill in the staking delegate information. Then press Confirm.
-                            </p>
-                            <p>Included: </p>
-                            <ul class="ml-4 mt-2">
-                                <li>- Staking End Date section: choose the time you want to end Staking. </li>
-                                <li>- Staking Amount section: enter the amount of EZC you want to stake.</li>
-                            </ul>
-                            <img class="my-4" src="./images/guides/guide-ezc-6.png" alt="ezchain">
-                            <img class="my-4" src="./images/guides/guide-ezc-7.png" alt="ezchain">
-                            <p class="mt-2 underline">4. Check the information and select Submit. </p>
-                            <img class="my-4" src="./images/guides/guide-ezc-8.png" alt="ezchain">
-                            <p>After performing the delegate, you will have to wait about 15 minutes to complete this
-                                Staking. </p>
-                            <img class="my-4" src="./images/guides/guide-ezc-9.png" alt="ezchain">
-                            <p>Once done, you can check the reward information in the Estimate Reward section of the
-                                Earn tab. </p>
-                            <img class="my-4" src="./images/guides/guide-ezc-10.png" alt="ezchain">
-                            <img class="my-4" src="./images/guides/guide-ezc-11.png" alt="ezchain">
+                            <h1 class="text-xl font-bold text-orange-400">How to withdraw EZC from SM Token Vesting</h1>
+                            <h2 class="text-base mt-2 font-bold">Step 1: install Metamask and import/switch to your
+                                investor wallet that you registered with EZChain</h2>
+                            <h2 class="text-base mt-2 font-bold">Step 2: Access to smart-contract on Blockchain Explorer
+                                at: <a class="underline text-blue-400 font-normal" href="https://cchain- 
+                                explorer.ezchain.com/address/0x05E4dfbB6f26E568D846C95C0C716C4338fd1C0A/write- 
+                                contract"><span>https://cchain-
+                                    explorer.ezchain.com/address/<span>wallet_addr</span>/write-
+                                    contract</span></a></h2>
+                            <h2 class="text-base font-bold">Step 3: click on Metamask icon on your browser and choose <b
+                                    class="text-blue-500">Connect</b> to let Metamask know that you will use this Wallet
+                                to interact with smart-contract Token Vesting:</h2>
+                            <img class="my-4" src="./images/guides/guide-ezc-14.png" alt="ezchain">
+                            <p class="mt-2 text-base">When successfully connected, you will see the following screen
+                                (<b>Connect</b> to < <span class="text-blue-500">wallet_addr</span> >) </p>
+                            <img class="my-4" src="./images/guides/guide-ezc-15.png" alt="ezchain">
+                            <h2 class="text-base mt-2 font-bold">Step 4: Click <b class="text-violet-700">“ Write ”</b>
+                                at <b class="text-black-a400">3. investorWithdraw</b>
+                                <span class="text-red-500">(note: DO NOT click on any other functions)</span>
+                            </h2>
+                            <img class="my-4" src="./images/guides/guide-ezc-16.png" alt="ezchain">
+                            <p class="mt-2 text-base"> Now Metamask will have a popup for you to confirm that the
+                                transaction will be made to interact with smart-contract Token Vesting: </p>
+                            <div class="flex justify-center items-center">
+                                <img class="my-4" src="./images/guides/guide-ezc-17.png" alt="ezchain">
+                            </div>
+                            <p class="mt-2 text-base">Check if the smart-contract address is correct (under format
+                                0x05E…1C0A), then click on Confirm </p>
+                            <h2 class="text-base font-bold">Step 5: wait for the transaction to be completed and check
+                                for EZC in your Wallet. </h2>
                         </div>
                     </div>
                 </div>
