--- a/guides.html
+++ b/guides.html
@@ -56,7 +56,8 @@
 
 <body class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 shadow-white-a500 shadow-md  z-100 right-0 left-0" id="header-nav" role="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 shadow-white-a500 shadow-md  z-100 right-0 left-0"
+            id="header-nav" role="navigation">
             <div class="container p-0 xl-container" style="max-width: 1170px;">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -79,34 +80,31 @@
                 <div class="collapse navbar-collapse text-light z-99" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto me-2">
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://ezchain.gitbook.io/">Developers
-                            </a>
+                            <a class="nav-link me-lg-3" href="https://ezchain.gitbook.io/">Developers </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://wallet.ezchain.com/"> Web
-                                wallet</a>
+                            <a class="nav-link me-lg-3" href="https://wallet.ezchain.com/"> Web wallet</a>
                         </li>
                         <li class="nav-item nav-link-explorer">
                             <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
                             <ul class="sub-menu-explorer">
                                 <div class="explorer_chain">
                                     <li class="nav-items">
-                                        <a class="nav-link me-lg-3" target="_blank"
-                                            href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
+                                        <a class="nav-link me-lg-3" href="https://cchain-explorer.ezchain.com/">
+                                            Explorer (C-chain)</a>
                                     </li>
                                     <li class="nav-items">
-                                        <a class="nav-link me-lg-3" target="_blank"
-                                            href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
+                                        <a class="nav-link me-lg-3" href="https://explorer.ezchain.com/"> Explorer
+                                            (X-Chain & P-Chain)</a>
                                     </li>
                                 </div>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank"
-                                href="https://explorer.ezchain.com/validators">Validators </a>
+                            <a class="nav-link me-lg-3" href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
-                        <li class="nav-item nav-link-explorer">
-                            <a class="nav-link me-lg-3 big-link" href="./guides.html">User guides</a>
+                        <li class="nav-item nav-link-explorer user-guide">
+                            <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
@@ -119,8 +117,7 @@
     <div id="__next">
         <div>
             <div class="container mx-auto" style="max-width: 1170px;">
-                <div
-                    class="hidden lg:block container mx-auto">
+                <div class="hidden lg:block container mx-auto">
                     <nav id="nav" class="lg:text-sm lg:leading-6 fixed top-24">
                         <div class="sticky top-0 -ml-0.5 pointer-events-none">
                             <div class="h-10 bg-white dark:bg-slate-900"></div>
@@ -143,7 +140,7 @@
                                     </div>Introduction to EZC staking
                                 </a></li>
                             <li><a href="/guides.html"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium hover:text-orange-400 text-slate-700 dark:text-slate-400 dark:hover:text-slate-300">
+                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 text-orange-400 font-medium hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
                                     <div
                                         class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-indigo-200 dark:group-hover:bg-indigo-500 dark:bg-slate-800 dark:highlight-white/5">
                                         <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
@@ -194,70 +191,13 @@
                                         </svg>
                                     </div>Upgrade Guide
                                 </a></li>
-                            <!-- <li><a href="https://explorer.ezchain.com/"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
-                                    <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-purple-200 dark:group-hover:bg-purple-400 dark:bg-slate-800 dark:highlight-white/5">
-                                        <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
-                                            <path
-                                                d="M6 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2V8ZM6 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8a2 2 0 0 1-2-2v-1Z"
-                                                class="fill-purple-400 group-hover:fill-purple-500 dark:group-hover:fill-purple-300 dark:fill-slate-600">
-                                            </path>
-                                            <path
-                                                d="M13 8a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2V8Z"
-                                                class="fill-purple-200 group-hover:fill-purple-300 dark:group-hover:fill-white dark:fill-slate-400">
-                                            </path>
-                                            <path
-                                                d="M13 15a2 2 0 0 1 2-2h1a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2h-1a2 2 0 0 1-2-2v-1Z"
-                                                class="fill-purple-400 group-hover:fill-purple-500 dark:group-hover:fill-purple-300 dark:fill-slate-600">
-                                            </path>
-                                        </svg>
-                                    </div><span class="">Explorer(X & P)</span>
-                                </a></li>
-                            <li><a href="https://t.me/EZChainOfficial"
-                                    class="group flex items-center lg:text-sm lg:leading-6 mb-8 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
-                                    <div
-                                        class="mr-4 rounded-md ring-1 ring-slate-900/5 shadow-sm group-hover:shadow group-hover:ring-slate-900/10 dark:ring-0 dark:shadow-none dark:group-hover:shadow-none dark:group-hover:highlight-white/10 group-hover:shadow-violet-200 dark:group-hover:bg-violet-500 dark:bg-slate-800 dark:highlight-white/5">
-                                        <svg class="h-6 w-6" viewBox="0 0 24 24" fill="none">
-                                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                                d="M11 5a6 6 0 0 0-4.687 9.746c.215.27.315.62.231.954l-.514 2.058a1 1 0 0 0 1.485 1.1l2.848-1.71c.174-.104.374-.15.576-.148H13a6 6 0 0 0 0-12h-2Z"
-                                                class="fill-violet-400 group-hover:fill-violet-500 dark:group-hover:fill-violet-300 dark:fill-slate-600">
-                                            </path>
-                                            <circle cx="12" cy="11" r="1"
-                                                class="fill-white dark:group-hover:fill-white dark:fill-slate-400">
-                                            </circle>
-                                            <circle cx="9" cy="11" r="1"
-                                                class="fill-violet-200 dark:group-hover:fill-white dark:fill-slate-400">
-                                            </circle>
-                                            <circle cx="15" cy="11" r="1"
-                                                class="fill-violet-200 dark:fill-slate-400 dark:group-hover:fill-white">
-                                            </circle>
-                                        </svg>
-                                    </div>Community
-                                </a></li> -->
-                            <!-- <li class="mt-12 lg:mt-8">
-                                <h5 class="mb-8 lg:mb-3 font-semibold text-slate-900 dark:text-slate-200">EZChain Guides
-                                </h5>
-                                <ul class="space-y-6 lg:space-y-2 border-l border-slate-100 dark:border-slate-800">
-                                    <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
-                                            href="/guides.html">Staking Guide EZC</a></li>
-                                    <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
-                                            href="/staking-mainnet.html">Staking EZC on EZChain mainnet</a></li>
-                                    <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
-                                            href="/token-vesting.html">How to withdraw EZC from SM Token Vesting</a>
-                                    </li>
-                                    <li><a class="block border-l pl-4 -ml-px border-transparent hover:border-slate-400 dark:hover:border-slate-500 text-slate-700 hover:text-slate-900 dark:text-slate-400 dark:hover:text-slate-300"
-                                            href="https://ezchain.gitbook.io/ezchain/welcome/welcome">Upgrade Guide</a>
-                                    </li>
-                                </ul>
-                            </li> -->
                         </ul>
                     </nav>
                 </div>
                 <div class="lg:pl-[25rem] 2xl:pl-[28.5rem]">
-                    <div class="max-w-3xl mx-auto pt-32 xl:max-w-none xl:ml-0 xl:mr-[15.5rem]">
+                    <div class="max-w-3xl mx-auto pt-32 xl:max-w-none xl:ml-0 xl:mr-[15.5rem] xl:pr-16">
                         <div id="header" class="relative -z-20 mb-12">
-                            <h1 class="text-xl font-bold text-orange-400">Staking Guide EZC</h1>
+                            <h1 class="text-xl font-bold text-orange-400">Detailed instructions for EZC staking</h1>
                             <p class="text-base mt-2">EZChain is a multi-chain platform including X Chain, P Chain, and
                                 C Chain. P Chain is used to manage metadata, manage validator nodes, and user staking.
                                 Therefore, to participate in staking on EZChain, you need to have money in P-Chain.</p>
@@ -305,6 +245,9 @@
                                 Earn tab. </p>
                             <img class="my-4" src="./images/guides/guide-ezc-10.png" alt="ezchain">
                             <img class="my-4" src="./images/guides/guide-ezc-11.png" alt="ezchain">
+                        </div>
+                        <div>
+                            <a class="font-bold inline-block hover:text-orange-400 text-black-a400 text-base cursor-pointer mt-4 float-right mb-4" href="./token-vesting.html">How to withdraw EZC from SM Token Vesting ></a>
                         </div>
                     </div>
                 </div>
