--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 <div class="collapse navbar-collapse text-light" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto me-2">
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://ezchain.gitbook.io/">Developers
+                            <a class="nav-link me-lg-3" href="https://ezchain.gitbook.io/">Developers
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank" href="https://wallet.ezchain.com/"> Web
+                            <a class="nav-link me-lg-3" href="https://wallet.ezchain.com/"> Web
                                 wallet</a>
                         </li>
                         <li class="nav-item nav-link-explorer">
@@ -78,48 +78,26 @@
                             <ul class="sub-menu-explorer">
                                 <div class="explorer_chain">
                                     <li class="nav-items">
-                                        <a class="nav-link me-lg-3" target="_blank"
+                                        <a class="nav-link me-lg-3"
                                             href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
                                     </li>
                                     <li class="nav-items">
-                                        <a class="nav-link me-lg-3" target="_blank"
+                                        <a class="nav-link me-lg-3"
                                             href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
                                     </li>
                                 </div>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link me-lg-3" target="_blank"
+                            <a class="nav-link me-lg-3"
                                 href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
                         <li class="nav-item nav-link-explorer">
-                            <a class="nav-link me-lg-3 big-link" href="./guides.html">User guides</a>
+                            <a class="nav-link me-lg-3" href="./staking-mainnet.html">User guides</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link me-lg-3" href="#comunity">Community</a>
                         </li>
-                        <!-- <li class="nav-item d-mb-none ds-none">
-                            <a class="nav-link me-lg-3" style="display: inline-block; padding-top: 4px;"
-                                href="#roadmap"><svg width="18" height="33" viewBox="0 0 18 33" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M17.3995 1L0.899536 32.5" stroke="#4F4F4F" />
-                                </svg>
-                            </a>
-                        </li>
-                        <li class="nav-item d-mb-none ds-none">
-                            <a class="nav-link me-lg-3" href="#roadmap"><svg width="20" height="20" viewBox="0 0 20 20"
-                                    fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M9.39954 14.75V18.1402C8.84842 17.906 8.2066 17.2751 7.62129 16.0394C7.4365 15.6493 7.26765 15.2175 7.11834 14.75H9.39954ZM10.3995 14.75V18.1402C10.9507 17.906 11.5925 17.2751 12.1778 16.0394C12.3626 15.6493 12.5314 15.2175 12.6807 14.75H10.3995ZM12.9567 13.75H10.3995V10.75H13.3736C13.3174 11.8278 13.1717 12.8388 12.9567 13.75ZM13.7266 14.75C13.3418 16.0596 12.8105 17.1571 12.1809 17.9404C14.0506 17.4207 15.6609 16.278 16.7741 14.75H13.7266ZM17.4014 13.75H13.9824C14.1868 12.8216 14.3223 11.8118 14.3749 10.75H18.3413C18.2155 11.824 17.8894 12.8368 17.4014 13.75ZM18.3995 9.75C18.3995 8.50229 18.1307 7.31737 17.6478 6.25H14.0843C14.2877 7.33312 14.3995 8.514 14.3995 9.75H18.3995ZM13.3995 9.75C13.3995 8.49604 13.2787 7.31364 13.0657 6.25H10.3995V9.75H13.3995ZM9.39954 9.75V6.25H6.73341C6.52038 7.31364 6.39954 8.49604 6.39954 9.75H9.39954ZM5.39954 9.75C5.39954 8.514 5.51135 7.33312 5.71478 6.25H2.15128C1.66837 7.31737 1.39954 8.50229 1.39954 9.75H5.39954ZM1.45774 10.75H5.42417C5.47679 11.8118 5.61226 12.8216 5.81669 13.75H2.39954V13.7536C1.91052 12.8394 1.58377 11.8254 1.45774 10.75ZM3.02493 14.75C4.13818 16.278 5.74847 17.4207 7.61813 17.9404C6.98857 17.1571 6.45723 16.0596 6.07251 14.75H3.02493ZM6.84233 13.75C6.62736 12.8388 6.48167 11.8278 6.42545 10.75H9.39954V13.75H6.84233ZM1.39954 5.5027C0.759638 6.78082 0.399536 8.22336 0.399536 9.75C0.399536 14.9967 4.65283 19.25 9.89954 19.25C15.1462 19.25 19.3995 14.9967 19.3995 9.75C19.3995 4.50329 15.1462 0.25 9.89954 0.25C6.28096 0.25 3.13492 2.27315 1.53084 5.25H1.39954V5.5027ZM2.68709 5.25H5.93542C6.32614 3.71922 6.91 2.44063 7.61813 1.55965C5.54975 2.13456 3.7988 3.47195 2.68709 5.25ZM6.96994 5.25H9.39954V1.35982C8.84842 1.59403 8.2066 2.22492 7.62129 3.46057C7.3723 3.98623 7.15224 4.58754 6.96994 5.25ZM10.3995 5.25H12.8291C12.6468 4.58754 12.4268 3.98623 12.1778 3.46057C11.5925 2.22492 10.9507 1.59403 10.3995 1.35982V5.25ZM13.8637 5.25H17.112C16.0003 3.47195 14.2493 2.13456 12.1809 1.55965C12.8891 2.44063 13.4729 3.71922 13.8637 5.25Z"
-                                        fill="#4F4F4F" />
-                                </svg> Language <svg width="12" height="7" viewBox="0 0 12 7" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path
-                                        d="M5.94975 6.22486L5.59619 6.57842L5.94975 6.93197L6.3033 6.57842L5.94975 6.22486ZM10.5459 0.921563L5.59619 5.87131L6.3033 6.57842L11.253 1.62867L10.5459 0.921563ZM6.3033 5.87131L1.35355 0.921563L0.646447 1.62867L5.59619 6.57842L6.3033 5.87131Z"
-                                        fill="#4F4F4F" />
-                                </svg>
-                            </a>
-                        </li> -->
                     </ul>
                 </div>
             </div>
