--- a/guides.html
+++ b/guides.html
@@ -170,7 +170,7 @@
                                                 class="fill-pink-50 group-hover:fill-pink-100 dark:group-hover:fill-white dark:fill-slate-400">
                                             </path>
                                         </svg>
-                                    </div>How to withdraw EZC from SM Token Vesting
+                                    </div>How investors can withdraw EZC
                                 </a></li>
                             <li><a href="#"
                                     class="group flex items-center lg:text-sm lg:leading-6 mb-4 font-medium text-slate-700 hover:text-orange-400 dark:text-slate-400 dark:hover:text-slate-300">
@@ -247,7 +247,7 @@
                             <img class="my-4" src="./images/guides/guide-ezc-11.png" alt="ezchain">
                         </div>
                         <div>
-                            <a class="font-bold inline-block hover:text-orange-400 text-black-a400 text-base cursor-pointer mt-4 float-right mb-4" href="./token-vesting.html">How to withdraw EZC from SM Token Vesting ></a>
+                            <a class="font-bold inline-block hover:text-orange-400 text-black-a400 text-base cursor-pointer mt-4 float-right mb-4" href="./token-vesting.html">How investors can withdraw EZC ></a>
                         </div>
                     </div>
                 </div>
