--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
                         </li>
                         <li class="nav-item nav-link-explorer">
                             <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
-                            <ul class="sub-menu-explorer">
+                            <ul id="sub-menu-explorer" class="sub-menu-explorer">
                                 <div class="explorer_chain">
-                                    <li class="nav-items">
+                                    <li class="nav-item">
                                         <a class="nav-link me-lg-3"
                                             href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
                                     </li>
-                                    <li class="nav-items">
+                                    <li class="nav-item">
                                         <a class="nav-link me-lg-3"
                                             href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
                                     </li>
@@ -92,7 +92,7 @@
                             <a class="nav-link me-lg-3"
                                 href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
-                        <li class="nav-item nav-link-explorer">
+                        <li class="nav-item">
                             <a class="nav-link me-lg-3" href="./staking-mainnet.html">User guides</a>
                         </li>
                         <li class="nav-item">
