--- a/staking-mainnet.html
+++ b/staking-mainnet.html
@@ -56,7 +56,7 @@
 
 <body class="antialiased text-slate-500 dark:text-slate-400 bg-white dark:bg-slate-900">
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 shadow-white-a500 shadow-md  z-100 right-0 left-0" id="header-nav" role="navigation">
+        <nav class="navbar navbar-expand-lg navbar-light fixed top-0 bg-white-a500 z-100 right-0 left-0" id="header-nav" role="navigation">
             <div class="container p-0 xl-container" style="max-width: 1170px;">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
@@ -90,11 +90,11 @@
                             <a class="nav-link me-lg-3 big-link" href="#">Explorer</a>
                             <ul class="sub-menu-explorer">
                                 <div class="explorer_chain">
-                                    <li class="nav-items">
+                                    <li class="nav-item">
                                         <a class="nav-link me-lg-3"
                                             href="https://cchain-explorer.ezchain.com/"> Explorer (C-chain)</a>
                                     </li>
-                                    <li class="nav-items">
+                                    <li class="nav-item">
                                         <a class="nav-link me-lg-3"
                                             href="https://explorer.ezchain.com/"> Explorer (X-Chain & P-Chain)</a>
                                     </li>
@@ -105,7 +105,7 @@
                             <a class="nav-link me-lg-3"
                                 href="https://explorer.ezchain.com/validators">Validators </a>
                         </li>
-                        <li class="nav-item nav-link-explorer user-guide">
+                        <li class="nav-item user-guide">
                             <a class="nav-link me-lg-3" href="./staking-mainnet.html" style="color: #fd7e14;">User guides</a>
                         </li>
                         <li class="nav-item">
@@ -257,6 +257,11 @@
             </div>
         </div>
     </div>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
+    <script src="js/aos.min.js"></script>
+    <script src="js/all.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
